--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@tanstack/react-query": "^4.32.5",
     "autoprefixer": "^10.4.14",
     "cra-template-typescript": "1.2.0",
     "postcss": "^8.4.27",
